# tanks-bevy

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  index.html  tanks_client-83c84ff6893abf74.js  tanks_client-875ed0296ee86f0.js  tanks_client-97c44c658c15f055.js  tanks_client-f782180e0c8d3b7c.js
.cargo/: config.toml
.github/workflows/: ci.yml  release.yaml
art/: tanks.blend  tanks.blend1
assets/: registry.json
assets/levels/: World.glb
assets/materials/: 08 - Default.glb  Material.001.glb  Material.002.glb  Material.003.glb  Material.004.glb  Material.005.glb  Material.006.glb  Material.007.glb  Material.008.glb  Material.009.glb  Material.010.glb  Material.011.glb  Material.012.glb  Material.013.glb  Material.014.glb  Material.015.glb  Material.016.glb  Material.glb
assets/models/: shell.glb  tank.glb
crates/utils/: Cargo.toml
crates/utils/src/: health.rs  lib.rs
crates/utils/src/controller/: smooth.rs
crates/utils/src/material/: grid.rs  mod.rs
crates/utils/src/meth/: mod.rs
crates/utils/src/physics/: mod.rs
credits/: CREDITS.md
network/: Cargo.toml
network/src/: lib.rs
src/: client.rs  lib.rs  main.rs  network.rs  server.rs
src/camera/: mod.rs  orbiter.rs  smooth.rs  tank.rs
src/client/: camera.rs  client.rs  gui.rs  input.rs  main_menu.rs  mod.rs  protocol.rs  renderer.rs
src/controller/: mod.rs  tank.rs
src/debug/: mod.rs
src/input/: mod.rs
src/main_menu/: mod.rs
src/material/: grid.rs  mod.rs
src/meth/: mod.rs
src/network/: client.rs  mod.rs  server.rs
src/renderer/: mod.rs
src/server/: cannon.rs  mod.rs  protocol.rs  server.rs
src/tanks_client/: audio.rs  camera.rs  client.rs  debug.rs  gui.rs  input.rs  main_menu.rs  mod.rs  particles.rs  renderer.rs
src/tanks_client/protocol/: mod.rs  protocol_native.rs  protocol_wasm.rs
src/tanks_server/: cannon.rs  protocol.rs  server.rs
tanks_client/: Cargo.toml  index.html
tanks_client/assets/models/: tank.glb
tanks_client/protocol_native/: Cargo.toml
tanks_client/protocol_native/src/: lib.rs
tanks_client/protocol_wasm/: Cargo.toml
tanks_client/protocol_wasm/src/: lib.rs
tanks_client/src/: audio.rs  camera.rs  client.rs  debug.rs  gui.rs  input.rs  lib.rs  main.rs  particles.rs  protocol.rs  renderer.rs
tanks_server/: Cargo.toml
tanks_server/src/: cannon.rs  lib.rs  main.rs  protocol.rs  server.rs
utils/: Cargo.toml
utils/src/: despawn.rs  health.rs  lib.rs
utils/src/controller/: mod.rs  orbiter.rs  smooth.rs
utils/src/physics/: mod.rs
