[package]
name = "tanks"
version = "0.1.4"
edition = "2021"

[lib]
name = "tanks"
path = "src/lib.rs"

[[bin]]
name = "tanks_server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "tanks_client"
path = "src/bin/client.rs"
required-features = ["client"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = ["client", "server"]
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]

server = [
    "dep:tokio",
    "dep:warp",
    "bevy_replicon_renet2/ws_server_transport",
    "bevy_replicon_renet2/wt_server_transport",
    "renet2_netcode/ws_server_transport",
    "renet2_netcode/wt_server_transport",
]

client = [
    "dep:bevy-inspector-egui",
    "dep:bevy_hanabi",
    "dep:bevy_simple_text_input",
    "dep:iyes_perf_ui",
    "dep:leafwing-input-manager",

    # native
    "dep:ureq",

    # wasm
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:tracing",
    "dep:tracing-wasm",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-timer",
    "dep:web-sys",
]

[dependencies]
bevy = { version = "0.15.1" }
bevy_asset_loader = { version = "0.22.0" }
bevy_replicon = { version = "0.29.2" }
bincode = { version = "1.3.3" }
blenvy = { git = "https://github.com/ptsd/blenvy", branch = "blenvy-bevy-0.15" }
bytemuck = { version = "1.21.0" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5.4" }
bevy_rapier3d = { version = "0.28.0", features = ["debug-render"] }
bevy_kira_audio = { version = "0.22.0" }

bevy-inspector-egui = { version = "0.28.1", optional = true }
bevy_hanabi = { version = "0.14.0", default-features = false, features = ["3d"], optional = true }
bevy_simple_text_input = { version = "0.10.1", optional = true }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main", optional = true }
leafwing-input-manager = { version = "0.16.0", optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }
warp = { version = "0.3.7", optional = true }

utils = { path = "./utils" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.12.1", optional = true }
bevy_replicon_renet2 = { version = "0.1.0", features = ["native_transport"] }
renet2_netcode = { version = "0.1.0", features = ["bevy", "native_transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.77", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-wasm = { version = "0.2.1", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
wasm-timer = { version = "0.2.5", optional = true }
web-sys = { version = "0.3.77", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"], optional = true }
bevy_replicon_renet2 = { version = "0.1.0", features = ["wt_client_transport", "ws_client_transport"] }
renet2_netcode = { version = "0.1.0", features = ["bevy", "wt_client_transport", "ws_client_transport"] }

[workspace]
members = [
    "utils",
]
resolver = "2"

[build-dependencies]
embed-resource = "1"
