[package]
name = "network"
version = "0.1.0"
edition = "2021"

[lib]
name = "network"
path = "src/lib.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]

[dependencies]
bevy = "0.15.1"
bevy_replicon = "0.29.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
embed-resource = "1"
