[package]
name = "network"
version = "0.1.0"
edition = "2021"

[lib]
name = "network"
path = "src/lib.rs"

[features]
default = []
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]

[dependencies]
bevy = "0.15.1"
bevy_replicon = "0.29.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
embed-resource = "1"
