[package]
name = "tanks_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "tanks_client"
path = "src/lib.rs"

[features]
default = []
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.28.1"
bevy_asset_loader = "0.22.0"
bevy_rapier3d = { version = "0.28.0", features = ["debug-render"] }
bevy_replicon = "0.29.2"
bevy_replicon_renet2 = { version = "0.1.0" }
bevy_simple_text_input = "0.10.1"
bincode = "1.3.3"
bytemuck = "1.21.0"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main" }
leafwing-input-manager = "0.16.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
url = "2.5.4"
utils = { path = "../utils" }
network = { path = "../network" }
bevy_kira_audio = "0.22.0"
bevy_hanabi = "0.14.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
protocol_native = { path = "./protocol_native" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
protocol_wasm = { path = "./protocol_wasm" }

[build-dependencies]
embed-resource = "1"
