[package]
name = "tanks_server"
version = "0.1.3"
edition = "2021"

[lib]
name = "tanks_server"
path = "src/lib.rs"

[features]
default = []
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]

[dependencies]
bevy = "0.15.1"
bevy_asset_loader = "0.22.0"
bevy_rapier3d = { version = "0.28.0", features = ["debug-render"] }
bevy_replicon = "0.29.2"
bevy_replicon_renet2 = { version = "0.1.0", features = ["native_transport", "ws_server_transport", "wt_server_transport"] }
bincode = "1.3.3"
bytemuck = "1.21.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
renet2_netcode = { version = "0.1.0", features = ["bevy", "native_transport", "ws_server_transport", "wt_server_transport"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
utils = { path = "../utils" }
network = { path = "../network" }
warp = "0.3.7"

[build-dependencies]
embed-resource = "1"
