[package]
name = "protocol_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocol_native"
path = "src/lib.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
debug = []
dev = [
    "debug"
]

[dependencies]
bevy_replicon_renet2 = { version = "0.1.0", features = ["native_transport"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
renet2_netcode = { version = "0.1.0", features = ["native_transport" ] }
ureq = "2.12.1"

[build-dependencies]
embed-resource = "1"
