[package]
name = "protocol_native"
version = "1.0.0"
edition = "2021"

[lib]
name = "protocol_native"
path = "src/lib.rs"

[features]
default = []
debug = []
dev = [
    "debug"
]

[dependencies]
bevy_replicon_renet2 = { version = "0.1.0", features = ["native_transport"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
renet2_netcode = { version = "0.1.0", features = ["native_transport" ] }
ureq = "2.12.1"

[build-dependencies]
embed-resource = "1"
