[package]
name = "protocol_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocol_wasm"
path = "src/lib.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
debug = []
dev = [
    "debug"
]

[dependencies]
bevy_replicon_renet2 = { version = "0.1.0", features = [ "wt_client_transport", "ws_client_transport" ] }
js-sys = "0.3.77"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
renet2_netcode = { version = "0.1.0", features = [ "wt_client_transport", "ws_client_transport" ] }
serde-wasm-bindgen = "0.6.5"
url = "2.5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-timer = "0.2.5"
web-sys = { version = "0.3.77", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[build-dependencies]
embed-resource = "1"
