[package]
name = "protocol_wasm"
version = "1.0.0"
edition = "2021"

[lib]
name = "protocol_wasm"
path = "src/lib.rs"

[features]
default = []
debug = []
dev = [
    "debug"
]

[dependencies]
bevy_replicon_renet2 = { version = "0.1.0", features = [ "wt_client_transport", "ws_client_transport" ] }
js-sys = "0.3.77"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
renet2_netcode = { version = "0.1.0", features = [ "wt_client_transport", "ws_client_transport" ] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
url = "2.5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-timer = "0.2.5"
web-sys = { version = "0.3.77", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

[build-dependencies]
embed-resource = "1"
